# AI-Agents-Agency

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/agent_runtime/: executor.py  testing.py
backend/agent_runtime/compiler/: custom_dag.py  graph_builder.py  pipelines.py  state.py  tool_resolution.py
backend/agent_runtime/guardrails/: budget.py  input_filters.py  output_filters.py
backend/agent_runtime/models/: provider_router.py
backend/agent_runtime/spec/: loader.py  models.py  validate.py
backend/agents_library/code_reviewer/: agent.yaml
backend/agents_library/customer_support/: agent.yaml
backend/agents_library/document_qna/: agent.yaml
backend/agents_library/meeting_notes/: agent.yaml
backend/agents_library/sales_outreach/: agent.yaml
backend/agents_library/test_generator/: agent.yaml
backend/agents_library/web_researcher/: agent.yaml
backend/alembic/: env.py
backend/alembic/versions/: e934d508aae9_add_vector_documents_table.py  ffebf6ec97b8_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  redis.py
backend/app/db/: models.py  seed.py  session.py
backend/app/schemas/: agents.py  runs.py
backend/app/worker/: client.py  settings.py  tasks.py
backend/evals/fixtures/: code-reviewer.yaml  customer-support.yaml  document-qna.yaml  meeting-notes.yaml  sales-outreach.yaml  test-generator.yaml  web-researcher.yaml
backend/evals/runners/: run_eval_suite.py
backend/tests/: conftest.py
backend/tools/: _db.py  base.py  registry.py
(+37 files in other folders)
